objects/MMPJ_Ext_Vign_Contrat__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for both Cognac &amp; Champagne</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_AP_previsionnel__c</fullName>
        <description>AP=Alcool Pur</description>
        <label>Volume AP prévisionnel</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Alcool_pour_climatique__c</fullName>
        <label>Alcool pour climatique</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bouilleur de profession</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Contrats (BP)</relationshipLabel>
        <relationshipName>Contrats1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobAccount__c</fullName>
        <label>BlobAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobContainer__c</fullName>
        <label>BlobContainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobFile__c</fullName>
        <label>BlobFile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_CLE_SPIRIT__c</fullName>
        <externalId>true</externalId>
        <label>Clé Spirit 1</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Code_Etablissement__c</fullName>
        <label>Code Etablissement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Compte_denouement__c</fullName>
        <inlineHelpText>Remplace le champ compte de reprise (mauvais data type)</inlineHelpText>
        <label>Compte dénouement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat_Id_Apport__c</fullName>
        <externalId>true</externalId>
        <label>Clé Id Apport</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat_Segmentation__c</fullName>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Courtier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Courtier</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Contrats (Courtier)</relationshipLabel>
        <relationshipName>Contrats2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cru__c</fullName>
        <label>Cru</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>BIES</fullName>
                </value>
                <value>
                    <fullName>FB</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>COGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_debut_du_contrat__c</fullName>
        <label>Date de début du contrat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_denouement__c</fullName>
        <label>Date de dénouement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_fin_du_contrat__c</fullName>
        <label>Date de fin du contrat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Document__c</fullName>
        <label>Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Duree_d_engagement__c</fullName>
        <label>Durée d&apos;engagement (Années)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_vers_document__c</fullName>
        <formula>&quot;https://www.mmpjetmoi.fr/attachment/file/&quot;&amp;Id&amp;&quot;/&quot; &amp;  MMPJ_Ext_Vign_Livreur__r.Id  &amp; &quot;?type=contrats&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien vers document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lieu_stockage_Bonnes_Fins__c</fullName>
        <label>Lieu de stockage des Bonnes Fins</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Livreur / Vigneron</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Contrats</relationshipLabel>
        <relationshipName>Contrats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Millesime__c</fullName>
        <label>Millésime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Pourcentage_d_acompte__c</fullName>
        <label>Pourcentage d&apos;acompte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Pourcentage_de_baisse_auto__c</fullName>
        <label>Pourcentage de baisse autorisée</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Pourcentage_de_la_recolte__c</fullName>
        <label>Pourcentage de la récolte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Prevision_de_livraison__c</fullName>
        <label>Prévision de livraison</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Quota_de_reference__c</fullName>
        <label>Quota de référence</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Quota_du_contrat__c</fullName>
        <label>Quota du contrat</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Rendement_Cognac_BNIC__c</fullName>
        <label>Rendement Cognac BNIC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Rendement_Cognac_Martell__c</fullName>
        <label>Rendement Cognac Martell</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Surface_Contrat_ha__c</fullName>
        <label>Surface Contrat (ha)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type_d_engagement__c</fullName>
        <label>Type d&apos;engagement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type_de_contrat__c</fullName>
        <label>Type de contrat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>33V</fullName>
                </value>
                <value>
                    <fullName>Achat BFBP Autre</fullName>
                </value>
                <value>
                    <fullName>Achat Vins</fullName>
                </value>
                <value>
                    <fullName>Annuel</fullName>
                </value>
                <value>
                    <fullName>BFBC</fullName>
                </value>
                <value>
                    <fullName>BFBP G7</fullName>
                </value>
                <value>
                    <fullName>BF EDV ORECO</fullName>
                </value>
                <value>
                    <fullName>BF Stockées Viticulture</fullName>
                </value>
                <value>
                    <fullName>BOUTEILLES PREDESTINEES</fullName>
                </value>
                <value>
                    <fullName>CONTRAT BOUTEILLES SPOT ACHAT</fullName>
                </value>
                <value>
                    <fullName>CONTRAT BOUTEILLES SPOT VENTE</fullName>
                </value>
                <value>
                    <fullName>ECH_CADR_A</fullName>
                    <label>CONTRAT CADRE ECHANGE ACHAT</label>
                </value>
                <value>
                    <fullName>ECH_CADR_V</fullName>
                    <label>CONTRAT CADRE ECHANGE VENTE</label>
                </value>
                <value>
                    <fullName>VC_CADR_A</fullName>
                    <label>CONTRAT CADRE VC ACHAT HORS VENDANGES</label>
                </value>
                <value>
                    <fullName>VC_CADR_V</fullName>
                    <label>CONTRAT CADRE VC VENTE HORS VENDANGES</label>
                </value>
                <value>
                    <fullName>VENTE_C</fullName>
                    <label>CONTRAT CADRE VENTE VENDANGES</label>
                </value>
                <value>
                    <fullName>CONTRAT CAF BOUTEILLES REPRIS LIVREUR</fullName>
                </value>
                <value>
                    <fullName>CONTRAT CAF HV</fullName>
                </value>
                <value>
                    <fullName>CONTRAT CAF KG</fullName>
                </value>
                <value>
                    <fullName>CAF</fullName>
                    <label>CONTRAT CAF SPOT</label>
                </value>
                <value>
                    <fullName>CONTRAT CAF VINS CLAIRS</fullName>
                </value>
                <value>
                    <fullName>CONTRAT ECHANGE ACHAT</fullName>
                </value>
                <value>
                    <fullName>CONTRAT ECHANGE VENTE</fullName>
                </value>
                <value>
                    <fullName>MOUT_CG</fullName>
                    <label>CONTRAT HL MOUT CADRE GLISSANT Vendange</label>
                </value>
                <value>
                    <fullName>MOUT_C</fullName>
                    <label>CONTRAT HL MOUT CADRE Vendange</label>
                </value>
                <value>
                    <fullName>MOUT_COG</fullName>
                    <label>CONTRAT HL MOUT COMMERCIAL GLISSANT Vendange</label>
                </value>
                <value>
                    <fullName>MOUT_CO</fullName>
                    <label>CONTRAT HL MOUT COMMERCIAL Vendange</label>
                </value>
                <value>
                    <fullName>CONTRAT HL MOUT GLISSANT</fullName>
                </value>
                <value>
                    <fullName>CONTRAT HL MOUT PLURIANNUEL</fullName>
                </value>
                <value>
                    <fullName>CONTRAT HL MOUT SPOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type_de_gestion__c</fullName>
        <label>Type de gestion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Volume_Annuel_Valide__c</fullName>
        <inlineHelpText>par défaut, cette case est égale au volume du contrat. Mais elle peut être modifiée selon le contexte annuel de la récolte (en + ou en -)</inlineHelpText>
        <label>Volume Annuel Validé</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Volume_CTR__c</fullName>
        <inlineHelpText>volume inscrit sur le contrat</inlineHelpText>
        <label>Volume contrat</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Volume_mis_en_stock__c</fullName>
        <label>Volume mis en stock (hL AP)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_vign_Compte_de_reprise__c</fullName>
        <label>Compte de reprise</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Lien_MMPJ_Moi__c</fullName>
        <description>Issue with the original formula field &quot;Lien vers document&quot;</description>
        <formula>HYPERLINK(&quot;https://www.mmpjetmoi.fr/attachment/file/&quot;&amp;Id&amp;&quot;/&quot; &amp;  MMPJ_Ext_Vign_Livreur__r.Id &amp; &quot;?type=contrats&quot;, &quot;Lien contrat MMPJ&amp;Moi&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien MMPJ&amp;Moi</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Maison_Acheteuse__c</fullName>
        <label>Maison Acheteuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MPJVR</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>PJ</fullName>
                </value>
                <value>
                    <fullName>TL</fullName>
                </value>
                <value>
                    <fullName>VMPJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Pressoir__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pressoir</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Contrats (Pressoir)</relationshipLabel>
        <relationshipName>Contrats3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Quantite__c</fullName>
        <label>Quantité</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_annee__c</fullName>
        <label>Année</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_ch_pn_mr__c</fullName>
        <label>Ch/Pn/mr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ch</fullName>
                </value>
                <value>
                    <fullName>Pn</fullName>
                </value>
                <value>
                    <fullName>Mr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_clef_externe_contrat__c</fullName>
        <externalId>true</externalId>
        <label>clef_externe_contrat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contrat</label>
    <listViews>
        <fullName>MMPJ_Ext_Vign_CHAMPAGNE_Basic</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>MMPJ_Ext_Vign_Type_de_contrat__c</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Cru__c</columns>
        <columns>MMPJ_Ext_Vign_Millesime__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_CTR__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_mis_en_stock__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_Annuel_Valide__c</columns>
        <columns>MMPJ_Ext_Vign_Surface_Contrat_ha__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MMPJ_Ext_Vign_CLE_SPIRIT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_Contrat_Segmentation__c</field>
            <operation>equals</operation>
            <value>Champagne</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MMPJ_Ext_Vign_Contrat__c.MMPJ_Ext_Vign_Appro_Press,MMPJ_Ext_Vign_Contrat__c.MMPJ_Ext_Vign_Prestation_de_services</value>
        </filters>
        <label>MMPJ_Ext_Vign_Champagne</label>
        <sharedTo>
            <group>MMPJ_Ext_Vign_EndUsers_Champagne_Basic</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MMPJ_Ext_Vign_Champagne</fullName>
        <columns>MMPJ_Ext_Vign_Type_de_contrat__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>MMPJ_XRM_Pressoir__c</columns>
        <columns>MMPJ_Ext_Vign_Date_de_debut_du_contrat__c</columns>
        <columns>MMPJ_Ext_Vign_Date_de_fin_du_contrat__c</columns>
        <columns>MMPJ_XRM_annee__c</columns>
        <columns>MMPJ_Ext_Vign_Courtier__c</columns>
        <columns>MMPJ_Ext_Vign_Contrat_Segmentation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_Contrat_Segmentation__c</field>
            <operation>equals</operation>
            <value>Champagne</value>
        </filters>
        <label>MMPJ&amp;Moi - Champagne</label>
    </listViews>
    <listViews>
        <fullName>MMPJ_Ext_Vign_Cognac</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>MMPJ_Ext_Vign_Type_de_contrat__c</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Cru__c</columns>
        <columns>MMPJ_Ext_Vign_Millesime__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_CTR__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_mis_en_stock__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_Annuel_Valide__c</columns>
        <columns>MMPJ_Ext_Vign_Surface_Contrat_ha__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MMPJ_Ext_Vign_CLE_SPIRIT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_Contrat_Segmentation__c</field>
            <operation>equals</operation>
            <value>Cognac</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MMPJ_Ext_Vign_Contrat__c.MMPJ_Ext_Vign_Cognac</value>
        </filters>
        <label>MMPJ&amp;Moi - Cognac</label>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>n° de contrat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contrats</pluralLabel>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Appro_Press</fullName>
        <active>true</active>
        <description>Champagne</description>
        <label>Approvisionnement - Pressurage</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Cognac</fullName>
        <active>true</active>
        <description>Cognac</description>
        <label>Contrat Viticulteur</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Prestation_de_services</fullName>
        <active>true</active>
        <description>Champagne</description>
        <label>Prestation de services</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>